k8s/02-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zahmaola-api-svc
  namespace: zahmaola
spec:
  selector:
    app: zahmaola-api
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 3000
  type: ClusterIP
