k8s/02-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zahmaola-api-ingress
  namespace: zahmaola
  annotations:
    cert-manager.io/cluster-issuer: http01-clusterissuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.zahmaola.com
      secretName: zahmaola-api-tls
  rules:
  -  host: api.zahmaola.com
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: zahmaola-api-svc
            port:
              number: 8000
